--- a/config-stow/.tmux.conf
+++ b/config-stow/.tmux.conf
@@ -36,7 +36,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-run '~/.config/tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
 
 # set vi-mode
 set-window-option -g mode-keys vi
